The code for task1

--- a/InterviewTest/Views/Newsletter/HostItem.cshtml
+++ b/InterviewTest/Views/Newsletter/HostItem.cshtml
@@ -1,4 +1,4 @@
-﻿@model InterviewTest.Controllers.NewsletterHostViewModel
+﻿@model InterviewTest.ViewModels.NewsletterHostViewModel
 
 <div class="host">
     <img src="@Model.ImageUrl" />
