--- a/InterviewTest/Views/Newsletter/Newsletter.cshtml
+++ b/InterviewTest/Views/Newsletter/Newsletter.cshtml
@@ -1,5 +1,7 @@
 ﻿@using InterviewTest.Controllers
-@model InterviewTest.Controllers.NewsletterViewModel
+@using InterviewTest.Models
+@using InterviewTest.ViewModels
+@model InterviewTest.ViewModels.NewsletterViewModel
 
 @{
     Layout = null;
