--- a/InterviewTest/Views/Newsletter/TripItem.cshtml
+++ b/InterviewTest/Views/Newsletter/TripItem.cshtml
@@ -1,4 +1,4 @@
-﻿@model InterviewTest.Controllers.NewsletterTripViewModel
+﻿@model InterviewTest.ViewModels.NewsletterTripViewModel
 
 <div class="trip">
     <img src="@Model.ImageUrl" />
