--- a/InterviewTest/Content/Site.css
+++ b/InterviewTest/Content/Site.css
@@ -29,3 +29,8 @@ textarea {
     height: auto;
     min-height: 0;
 }
+       .list{
+            display:inline-flex;
+            width:45%;
+            font-size:0.8em;
+        }
