--- a/InterviewTest/Views/Newsletter/Newsletter.cshtml
+++ b/InterviewTest/Views/Newsletter/Newsletter.cshtml
@@ -16,11 +16,12 @@
         }
         .item {
             display: inline-block;
-            width: 48%;
             text-align: center;
             margin-bottom: 20px;
+            width: 48%;
         }
-
+       .item:nth-last-child(1):nth-child(odd) { width: 96%;}
+       
         .item img {
             width: 60%;
         }
@@ -28,7 +29,9 @@
         .host img {
             border-radius: 50%;
         }
+ 
     </style>
+  
 </head>
 <body>
 <div>
@@ -36,6 +39,7 @@
     <p>Take a look at the amazing hosts and sellers new on Vidados!</p>
 
     <div class="item-container">
+        
         @foreach (var item in Model.Items)
         {
             <div class="item">
@@ -47,9 +51,11 @@
                 {
                     @Html.Partial("HostItem", item)
                 }
+
             </div>
         }
-    </div>
+        
+            </div>
     <p>
         Come and book with us soon!
     </p>
