--- a/InterviewTest/Views/Newsletter/List.cshtml
+++ b/InterviewTest/Views/Newsletter/List.cshtml
@@ -9,45 +9,43 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <div class="row">
-            @using (Html.BeginForm("create", "Newsletter", FormMethod.Post))
-            {
-                <h2>Create newsletters</h2>
-                <label>How many <input type="number" name="count" value="10"/></label>
-                <button class="btn btn-default" type="submit">Create newsletters</button>
-            }
-        </div>
-        <div class="row">
-            <h2>View sample newsletter</h2>
-            <a href="@Url.Action("sample", "newsletter")" class="btn btn-default">View</a>
-        </div>
-    </div>
-    
-    @if (Model.Newsletters.Any())
+    @using (Html.BeginForm("create", "Newsletter", FormMethod.Post))
     {
-        <div class="col-md-4">
-            <table class="table">
-                <tr><th>Id</th><th>Created At</th></tr>
-                @foreach (var newsletter in Model.Newsletters.OrderByDescending(n => n.Id))
-                {
-                    <tr>
-                        <td><a href="@Url.Action("Display", new {newsletter.Id})">@newsletter.Id</a></td>
-                        <td>@newsletter.CreatedAt.ToString("yyyy-MM-dd HH:mm:ss")</td>
-                    </tr>
+        <div class="col-md-8">
+            <h2>Create newsletters</h2>
 
-                }
-            </table>
-        </div>
+            
+            <div class="form-group">
+                <label>How many newsletters? <input class="form-control" type="number" name="count" value="10" /></label>
+            </div>
 
+                <h3>Actions:</h3>
+                <div class="btn-group">
+                    <button class="btn btn-primary" type="submit">Create Newsletters</button>
+                    <a href="@Url.Action("sample", "newsletter")" class="btn btn-default">View Sample Newsletter</a>
+                    <a href="@Url.Action("deleteall", "newsletter")" class="btn btn-danger">Delete All Newsletters</a>
+                </div>
+
+            </div>
         <div class="col-md-4">
-            <h2>Delete all</h2>
-            @using (Html.BeginForm("deleteall", "Newsletter", FormMethod.Post))
+
+            <h2>Created newsletters</h2>
+            @if (Model.Newsletters.Any())
             {
-                <button type="submit" class="btn btn-default">Delete</button>
+                <div class="col-md-6">
+                    <table class="table">
+                        <tr><th>Id</th><th>Created At</th></tr>
+                        @foreach (var newsletter in Model.Newsletters.OrderByDescending(n => n.Id))
+                        {
+                            <tr>
+                                <td><a href="@Url.Action("Display", new {newsletter.Id})">@newsletter.Id</a></td>
+                                <td>@newsletter.CreatedAt.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                            </tr>
+
+                        }
+                    </table>
+                </div>
             }
         </div>
-
     }
-
 </div>
