Tasks 1 and 2 completed.

--- a/InterviewTest/Views/Home/Index.cshtml
+++ b/InterviewTest/Views/Home/Index.cshtml
@@ -24,4 +24,12 @@
         
         <p><a class="btn btn-default" href="@Url.Action("list", "newsletter")">View newsletters</a></p>
     </div>
+    <div class="col-md-4">
+        <h2>Settings</h2>
+        <p>
+            Allow the order and quantity of trips and hosts to be specified.
+        </p>
+
+        <p><a class="btn btn-default" href="@Url.Action("index", "settings" )">Settings</a></p>
+    </div>
 </div>
