--- a/InterviewTest/Views/Home/Index.cshtml
+++ b/InterviewTest/Views/Home/Index.cshtml
@@ -21,7 +21,14 @@
     </div>
     <div class="col-md-4">
         <h2>View newsletters</h2>
-        
-        <p><a class="btn btn-default" href="@Url.Action("list", "newsletter")">View newsletters</a></p>
+
+        <p><a class="btn btn-default" href="@Url.Action("list", "newsletter")">View newsletters</a>
+        </p>
     </div>
+    <div class="col-md-4">
+        <h2>Configure newsletters</h2>
+
+        <p><a class="btn btn-default" href="@Url.Action("configure", "Newsletter")" >Configure newsletters</a></p>
+    </div>
+
 </div>
