--- a/InterviewTest/Views/Newsletter/List.cshtml
+++ b/InterviewTest/Views/Newsletter/List.cshtml
@@ -14,7 +14,8 @@
             @using (Html.BeginForm("create", "Newsletter", FormMethod.Post))
             {
                 <h2>Create newsletters</h2>
-                <label>How many <input type="number" name="count" value="10"/></label>
+                <label>How many <input type="number" name="count" value="10"/></label><br />
+                <label>Newsletter Format <input type="text" name="newsLetterFormat" value="@ViewBag.NewsLetterFormat" /></label><br />
                 <button class="btn btn-default" type="submit">Create newsletters</button>
             }
         </div>
